# rules_kustomize

./: .gitignore  CODEOWNERS  MODULE.bazel  README.rst  WORKSPACE.bazel
.bcr/: metadata.template.json
.github/actions/build-test/: action.yaml
.github/workflows/: ci.yaml  release.yaml
examples/bzlmod/: MODULE.bazel  WORKSPACE.bazel
examples/bzlmod/root/: BUILD.bazel  kustomization.yaml  objects.yaml
examples/simple/: BUILD.bazel
kustomize/: BUILD.bazel  deps.bzl  extensions.bzl  kustomize-build-from-archive  kustomize-build-from-archived-runfiles  kustomize-build-from-runfiles  kustomize.bzl  repositories.bzl
kustomize/private/: future.bzl  repositories.bzl  tools.bzl
kustomize/private/extensions/: download.bzl  helm.bzl  kustomize.bzl  semver.bzl
kustomize/private/tools/helm/: BUILD.tool.bazel  toolchain.bzl
kustomize/private/tools/kustomize/: BUILD.tool.bazel  toolchain.bzl
test/: BUILD.bazel  diff-test-runner  kustomize_test.bzl  regenerate-golden-files
test/testdata/components/extra-translations/: BUILD.bazel  kustomization.yaml
test/testdata/helm/: golden.yaml  kustomization.yaml  pdb.yaml
test/testdata/helm/charts/: BUILD.bazel
test/testdata/helm/charts/minecraft/: Chart.yaml
test/testdata/overlay/: golden.yaml  kustomization.yaml  pod.yaml
test/testdata/simple/: config-bindings  golden.yaml  kustomization.yaml
