load("kustomize_test.bzl", "kustomize_test")

kustomize_test(
    name = "simple",
    srcs = [
        "testdata/simple/config-bindings",
    ],
)

kustomize_test(
    name = "generated_kustomization",
    srcs = [
        "//test/testdata/generated/kustomization:bindings.env",
    ],
    golden_file = "//test/testdata/generated/kustomization:golden.yaml",
    kustomization_file = "//test/testdata/generated/kustomization:kustomization.yaml",
)

kustomize_test(
    name = "generated_resource",
    srcs = [
        "//test/testdata/generated/resource:bindings.env",
    ],
    golden_file = "//test/testdata/generated/resource:golden.yaml",
    kustomization_file = "//test/testdata/generated/resource:kustomization.yaml",
)

kustomize_test(
    name = "overlay",
    srcs = [
        "testdata/overlay/pod.yaml",
    ],
    enable_managed_by_label = True,
    deps = [
        ":simple",
        "//test/testdata/components/extra-translations:extra_translations",
    ],
)

kustomize_test(
    name = "helm",
    srcs = [
        "testdata/helm/pdb.yaml",
        "//test/testdata/helm/charts",
    ],
    requires_helm = True,
)
